# Circuit-

./: .gitignore  Anchor.toml  INTEGRATION.md  MINT_ADDRESS.txt  README.md  index.html  package-lock.json  package.json  style.css
app/: .env.example  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx
app/app/admin/: page.tsx
app/app/admin/login/: page.tsx
app/app/confirm/: page.tsx
app/app/details/: page.tsx
app/app/drop/: page.tsx
app/app/garment/[mint]/: page.tsx
app/app/landing/: page.tsx
app/app/passport/: page.tsx
app/app/passport/history/: page.tsx
app/components/: AdminNavbar.tsx  Footer.tsx  Navbar.tsx  NewsletterForm.tsx  Selector.tsx  SignInModal.tsx
app/lib/: auth-context.tsx  backendApi.ts  constants.ts  db.ts  solana-service.ts  utils.ts
app/providers/: ClientProviders.tsx  WalletProvider.tsx
backend/: .env.example  package-lock.json  package.json
backend/src/: dbRoutes.js  routes.js  server.js  transactionService.js  walletManager.js
docs/: HANDOVER.md  TECHNICAL_OVERVIEW.md
programs/circuit-drops/: Cargo.toml
programs/circuit-drops/src/: lib.rs
programs/circuit-escrow/: Cargo.toml
programs/circuit-escrow/src/: lib.rs
scripts/: create-drop.ts  mint-garment.ts  tsconfig.json
tests/: circuit-drops.ts  circuit-escrow.ts
