[package]
name = "circuit-drops"
version = "0.1.0"
description = "Circuit drops program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circuit_drops"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
