[package]
name = "circuit-escrow"
version = "0.1.0"
description = "Circuit escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circuit_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
